<resources>
    <string name="app_name">Ticker Chart</string>
    <string name="companyName">company</string>
    <string name="ask_price">ask price</string>
    <string name="last_price">last price</string>
    <string name="high_price">high price</string>
    <string name="bid_price">bid price</string>
    <string name="general_index">General Index</string>
    <string name="amount_general">amount</string>
    <string name="trades">trades</string>
    <string name="fixed">fixed</string>
    <string name="winning">winning</string>
    <string name="losing">losing</string>
    <string name="companies">companies</string>
    <string name="volume_general">volume</string>
    <string name="trades_count">trades count</string>
    <string name="amount_details">amount</string>
    <string name="volume_details">volume</string>
    <string name="dark_theme">Switch to night theme</string>
    <string name="light_theme">Switch to light theme</string>
    <string name="ar_language">Switch to Arabic Language</string>
    <string name="en_language">Switch to English Language</string>
    <string name="close_nav">Close</string>
    <string name="open">Open</string>
    <string name="application_settings">Application Settings</string>
    <string name="general_settings_label">General Settings</string>
    <string name="high">high</string>
    <string name="low">low</string>
</resources>
