<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/generalIndexFragement"
            android:name="com.example.exercise.GeneralIndexFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1">
        </androidx.fragment.app.FragmentContainerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/companyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center|start"
                android:padding="7dp"
                android:text="@string/companyName"
                android:textColor="@color/grey"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/askprice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center|start"
                android:padding="7dp"
                android:text="@string/ask_price"
                android:textColor="@color/grey"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lastprice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center|start"
                android:padding="7dp"
                android:text="@string/last_price"
                android:textColor="@color/grey"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bidprice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center|start"
                android:padding="7dp"
                android:text="@string/bid_price"
                android:textColor="@color/grey"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/highprice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#ffffff"
                android:gravity="center|start"
                android:padding="7dp"
                android:text="@string/high_price"
                android:textColor="@color/grey"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/marketwatch"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:background="@color/white" />


        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/companyDetailsFragement"
            android:name="com.example.exercise.CompanyDetailsFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1">
        </androidx.fragment.app.FragmentContainerView>

    </LinearLayout>

</LinearLayout>